--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx nodemon --exec npx babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/node": "^7.5.0",
-    "@babel/preset-env": "^7.5.0"
+    "@babel/preset-env": "^7.5.0",
+    "nodemon": "^1.19.1"
   }
 }
